--- a/battle-hexes-web/index.html
+++ b/battle-hexes-web/index.html
@@ -38,9 +38,9 @@
 </head>
 <body>
   <div id="menu">
-    <h3>Menu</h3>
-    <button>Button 1</button>
-    <button>Button 2</button>
+    <h3>Battle Hexes</h3>
+    <div id="selHexContents"></div>
+    <div id="selHexCoord"></div>
   </div>
   <div id="canvas-container"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
