--- a/battle-hexes-web/index.html
+++ b/battle-hexes-web/index.html
@@ -44,7 +44,9 @@
   </div>
   <div id="canvas-container"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-  <script src="battle-classes.js"></script>
+  <script src="board.js"></script>
+  <script src="hex.js"></script>
+  <script src="unit.js"></script>
   <script src="battle-draw.js"></script>
 </body>
 </html>
