big drawing refactor pt 1

--- a/battle-hexes-web/index.html
+++ b/battle-hexes-web/index.html
@@ -47,6 +47,9 @@
   <script src="board.js"></script>
   <script src="hex.js"></script>
   <script src="unit.js"></script>
+  <script src="hex-drawer.js"></script>
+  <script src="unit-drawer.js"></script>
+  <script src="selection-drawer.js"></script>
   <script src="battle-draw.js"></script>
 </body>
 </html>
