big drawing refactor pt 3

--- a/battle-hexes-web/index.html
+++ b/battle-hexes-web/index.html
@@ -50,6 +50,7 @@
   <script src="hex-drawer.js"></script>
   <script src="unit-drawer.js"></script>
   <script src="selection-drawer.js"></script>
+  <script src="move-arrow-drawer.js"></script>
   <script src="battle-draw.js"></script>
 </body>
 </html>
