--- a/battle-hexes-web/index.html
+++ b/battle-hexes-web/index.html
@@ -7,6 +7,7 @@
   <style>
     body {
       background-color: #5A5A5A;
+      font-family: 'Raleway', sans-serif; 
       margin: 0;
       display: flex;
       flex-direction: row-reverse;
@@ -37,13 +38,14 @@
   </style>
 </head>
 <body>
-  <div id="menu">
-    <h3>Battle Hexes</h3>
+  <div id="menu" style="background-color: #F8F8F8;">
+    <h2>Battle Hexes</h2>
     <div id="selHexContents"></div>
     <div id="selHexCoord"></div>
   </div>
   <div id="canvas-container"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   <script src="board.js"></script>
   <script src="hex.js"></script>
   <script src="unit.js"></script>
