updates to unit class for more attributes

--- a/battle-hexes-web/index.html
+++ b/battle-hexes-web/index.html
@@ -53,6 +53,8 @@
   <script src="unit-drawer.js"></script>
   <script src="selection-drawer.js"></script>
   <script src="move-arrow-drawer.js"></script>
+  <script src="unit-types.js"></script>
+  <script src="menu.js"></script>
   <script src="battle-draw.js"></script>
 </body>
 </html>
