--- a/battle-hexes-web/index.html
+++ b/battle-hexes-web/index.html
@@ -42,6 +42,7 @@
     <h2>Battle Hexes</h2>
     <div id="selHexContents"></div>
     <div id="selHexCoord"></div>
+    <div id="unitMovesLeftDiv"></div>
   </div>
   <div id="canvas-container"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
