add end turn button

--- a/battle-hexes-web/index.html
+++ b/battle-hexes-web/index.html
@@ -43,6 +43,8 @@
     <div id="selHexContents"></div>
     <div id="selHexCoord"></div>
     <div id="unitMovesLeftDiv"></div>
+    <h3>Game Stages</h3>
+    <button id="endTurnBtn" onclick="menu.doEndTurn()">End Turn</button>
   </div>
   <div id="canvas-container"></div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
