--- a/battle-hexes-web/src/index.html
+++ b/battle-hexes-web/src/index.html
@@ -44,20 +44,9 @@
     <div id="selHexCoord"></div>
     <div id="unitMovesLeftDiv"></div>
     <h3>Game Stages</h3>
-    <button id="endTurnBtn" onclick="menu.doEndTurn()">End Turn</button>
+    <button id="endTurnBtn">End Turn</button>
   </div>
   <div id="canvas-container"></div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
-  <script src="board.js"></script>
-  <script src="hex.js"></script>
-  <script src="unit.js"></script>
-  <script src="hex-drawer.js"></script>
-  <script src="unit-drawer.js"></script>
-  <script src="selection-drawer.js"></script>
-  <script src="move-arrow-drawer.js"></script>
-  <script src="unit-types.js"></script>
-  <script src="menu.js"></script>
-  <script src="battle-draw.js"></script>
 </body>
 </html>
