--- a/battle-hexes-web/src/index.html
+++ b/battle-hexes-web/src/index.html
@@ -44,6 +44,8 @@
     <div id="selHexCoord"></div>
     <div id="unitMovesLeftDiv"></div>
     <h3>Game Stages</h3>
+    <div>Current turn: <span id="currentTurnLabel"></span></div>
+    <br/>
     <button id="endTurnBtn">End Turn</button>
   </div>
   <div id="canvas-container"></div>
