add cpu player class and winston dependency

--- a/battle-hexes-web/src/index.html
+++ b/battle-hexes-web/src/index.html
@@ -46,15 +46,14 @@
     <div id="gameStagesMenu">
       <h3>Game Stages</h3>
       <div id="phasesList">
-        <span id="phasesListMove">Movement</span> →
-        <span id="phasesListCombat">Combat</span> →
+        <span id="phasesListMove" class="current-phase">Movement</span> →
+        <span id="phasesListCombat" class="disabled-phase">Combat</span> →
         <span id="phasesListEndTurn">End Turn</span>
       </div>
-      <div>Current phase: <span id="currentPhaseLabel">Movement</span></div>
       <div>Current turn: <span id="currentTurnLabel"></span></div>
     </div>
     <br/>
-    <button id="endTurnBtn">End Turn</button>
+    <button id="endTurnBtn">Done Moving</button>
   </div>
   <div id="canvas-container"></div>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
