update menu for phase changes

--- a/battle-hexes-web/src/index.html
+++ b/battle-hexes-web/src/index.html
@@ -46,16 +46,12 @@
     <div id="gameStagesMenu">
       <h3>Game Stages</h3>
       <div id="phasesList">
-        <!--
-        <span id="phasesListMove" class="current-phase">Movement</span> →
-        <span id="phasesListCombat" class="disabled-phase">Combat</span> →
-        <span id="phasesListEndTurn">End Turn</span>
-        -->
+        <!-- phases list is created dynamically -->
       </div>
       <div>Current turn: <span id="currentTurnLabel"></span></div>
     </div>
     <br/>
-    <button id="endTurnBtn">Done Moving</button>
+    <button id="endPhaseBtn"></button>
   </div>
   <div id="canvas-container"></div>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
