Add game over detection

--- a/battle-hexes-web/src/index.html
+++ b/battle-hexes-web/src/index.html
@@ -52,6 +52,8 @@
     </div>
     <br/>
     <button id="endPhaseBtn"></button>
+    <h3 id="gameOverLabel" style="display: none;">Game Over</h3>
+    <button id="newGameBtn" style="display: none;">New Game</button>
   </div>
   <div id="canvas-container"></div>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
