Add auto new game option

--- a/battle-hexes-web/src/index.html
+++ b/battle-hexes-web/src/index.html
@@ -53,6 +53,7 @@
     <br/>
     <button id="endPhaseBtn"></button>
     <h3 id="gameOverLabel" style="display: none;">Game Over</h3>
+    <label><input type="checkbox" id="autoNewGame"> Start new game automatically</label>
     <button id="newGameBtn" style="display: none;">New Game</button>
   </div>
   <div id="canvas-container"></div>
