Style menu checkboxes on their own lines

--- a/battle-hexes-web/src/battle.html
+++ b/battle-hexes-web/src/battle.html
@@ -26,6 +26,11 @@
       padding: 10px;
     }
 
+    #menu .menu-toggle {
+      display: block;
+      margin: 8px 0;
+    }
+
     #canvas-container {
       flex-grow: 1;
       overflow-y: auto;
@@ -53,7 +58,8 @@
     <br/>
     <button id="endPhaseBtn"></button>
     <h3 id="gameOverLabel" style="display: none;">Game Over</h3>
-    <label><input type="checkbox" id="autoNewGame"> Start new game automatically</label>
+    <label class="menu-toggle"><input type="checkbox" id="showHexCoords" checked> Show hex coordinates</label>
+    <label class="menu-toggle"><input type="checkbox" id="autoNewGame"> Start new game automatically</label>
     <button id="newGameBtn" style="display: none;">New Game</button>
   </div>
   <div id="canvas-container"></div>
