Add terrain model and UI display

--- a/battle-hexes-web/src/battle.html
+++ b/battle-hexes-web/src/battle.html
@@ -61,6 +61,7 @@
     <h2>Battle Hexes</h2>
     <div id="selHexContents"></div>
     <div id="selHexCoord"></div>
+    <div id="selHexTerrain"></div>
     <div id="unitMovesLeftDiv"></div>
     <div id="gameStagesMenu">
       <h3>Game Stages</h3>
