Use Objective getters and add tests

--- a/battle-hexes-web/src/battle.html
+++ b/battle-hexes-web/src/battle.html
@@ -62,6 +62,7 @@
     <div id="selHexContents"></div>
     <div id="selHexCoord"></div>
     <div id="selHexTerrain"></div>
+    <div id="selHexObjectives"></div>
     <div id="unitMovesLeftDiv"></div>
     <div id="gameStagesMenu">
       <h3>Game Stages</h3>
